# zero-ops

./: .gitignore  Cargo.toml  README.md  go.work  go.work.sum  websites.txt
charts/libsql-server/: values-sample.yaml
charts/libsql-server/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secrets.yaml  service.yaml  serviceaccount.yaml
charts/libsql-server/templates/tests/: test-connection.yaml
data/: events.db
embedded-replica-sample/: index.js  package-lock.json  package.json
go-libsql-sample/: go.mod  go.sum  main.go
libsql-sample/: Cargo.toml
libsql-sample/src/: main.rs
migrations/: 10_insert_sample_events.sql  1_create_events_table.sql  20230917003745_create_platform_table.sql  20230917003827_create_events_table.sql  20230917004108_insert_platform_record.sql  20230917004203_insert_events_record.sql  2_add_createddate_to_event_table.sql
src/: db.rs  initializer.rs  main.rs  migration.rs  state.rs
src/events/: domain.rs  mod.rs  repository.rs  routes.rs
src/events/repository/: event_repo.rs  mod.rs
src/platform/: domain.rs  mod.rs  repository.rs  routes.rs  service.rs
src/templates/: add_event.html  event_list.html  show_event.html  show_platform.html
terraform/: main.tf  output.tf  variables.tf  version.tf
terraform/libsql-sample/: Cargo.toml
