[package]
name = "zero-ops"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.1", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1.31.0", features = ["full"] }
actix-web = "4"
