[package]
name = "libsql-sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
libsql-client = "0.32.0"
tokio = { version = "1.31.0", features = ["full"] }
url = "2.3.1"
rand = "0.8.5"
random-string = "1.0.0"
